--- a/style.css
+++ b/style.css
@@ -166,5 +166,8 @@ i {
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
 
-.winner { background-color: #f7f7f7; }
-.winner .player-name { font-weight: 300;  color: rebeccapurple; }
+.winner { background-color: rgb(113, 62, 165); 
+        background-image: url(dicebg1.jpg);
+        background-blend-mode: multiply;
+    }
+.winner .player-name { font-weight: 400;  color: rgb(254, 253, 255); }
